make video_segments a list of videosegmentresponses
